--- a/frontend_react/src/container/Footer/Footer.scss
+++ b/frontend_react/src/container/Footer/Footer.scss
@@ -128,3 +128,9 @@
     margin: 1rem 0;
   }
 }
+
+.app__footer-form div input,
+.app__footer-form div textarea,
+.app__footer-form button {
+  background-color: #fef4f5;
+}
